--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'pillFlowerApp'
+include ':react-native-sound'
+project(':react-native-sound').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-sound/android')
+include ':@remobile/react-native-audio'
+project(':@remobile/react-native-audio').projectDir = new File(rootProject.projectDir, '../node_modules/@remobile/react-native-audio/android')
 
 include ':app'
