--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@remobile/react-native-audio": "^1.0.0",
     "eslint": "^3.19.0",
     "react": "16.0.0-alpha.6",
-    "react-native": "0.43.4"
+    "react-native": "0.43.4",
+    "react-native-simple-sound": "^1.0.0",
+    "react-native-sound": "^0.10.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
