--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "react-native": "0.43.4",
     "react-native-audio-player-recorder": "^2.0.0",
     "react-native-gestures": "^0.3.0",
+    "react-native-image-pan-zoom": "^2.0.0",
+    "react-native-photo-view": "^1.2.0",
+    "react-native-pinch-zoom-view": "^0.1.2",
     "react-native-simple-sound": "^1.0.0",
     "react-native-sound": "^0.10.0",
+    "react-native-transformable-image": "0.0.18",
     "react-native-video": "^1.0.0"
   },
   "devDependencies": {
