--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-audio-player-recorder": "^2.0.0",
     "react-native-gestures": "^0.3.0",
     "react-native-image-pan-zoom": "^2.0.0",
+    "react-native-navigation": "^1.1.63",
     "react-native-photo-view": "^1.2.0",
     "react-native-pinch-zoom-view": "^0.1.2",
     "react-native-simple-sound": "^1.0.0",
