--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-simple-sound": "^1.0.0",
     "react-native-sound": "^0.10.0",
     "react-native-transformable-image": "0.0.18",
-    "react-native-video": "^1.0.0"
+    "react-native-video": "^1.0.0",
+    "react-navigation": "^1.0.0-beta.9"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
