--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-camera')
     compile project(':react-native-audio-player-recorder')
     compile project(':react-native-sound')
     compile project(':@remobile/react-native-audio')
