--- a/ios/pillFlowerApp/Info.plist
+++ b/ios/pillFlowerApp/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need to store pictures</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Enable to take pictures with Pill Flowers!</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Platelet Regular.ttf</string>
