--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.4",
     "react-native-audio-player-recorder": "^2.0.0",
+    "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-easy-toast": "^1.0.5",
     "react-native-gestures": "^0.3.0",
     "react-native-image-pan-zoom": "^2.0.0",
