--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-video')
+    compile project(':react-native-photo-view')
+    compile project(':react-native-navigation')
     compile project(':react-native-camera')
     compile project(':react-native-audio-player-recorder')
     compile project(':react-native-sound')
