--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fs')
+    compile project(':react-native-view-shot')
     compile project(':react-native-video')
     compile project(':react-native-photo-view')
     compile project(':react-native-navigation')
