--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-audio-player-recorder": "^2.0.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-easy-toast": "^1.0.5",
+    "react-native-fs": "^2.3.2",
     "react-native-gestures": "^0.3.0",
     "react-native-image-pan-zoom": "^2.0.0",
     "react-native-navigation": "^1.1.63",
@@ -23,6 +24,7 @@
     "react-native-sound": "^0.10.0",
     "react-native-transformable-image": "0.0.18",
     "react-native-video": "^1.0.0",
+    "react-native-view-shot": "^1.9.1",
     "react-navigation": "^1.0.0-beta.9"
   },
   "devDependencies": {
