--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-transformable-image": "0.0.18",
     "react-native-video": "^1.0.0",
     "react-native-view-shot": "^1.9.1",
-    "react-navigation": "^1.0.0-beta.9"
+    "react-navigation": "^1.0.0-beta.9",
+    "react-redux": "^5.0.5",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
