--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@remobile/react-native-audio": "^1.0.0",
     "eslint": "^3.19.0",
     "react": "16.0.0-alpha.6",
+    "react-idle-timer": "^1.3.3",
     "react-native": "0.43.4",
     "react-native-audio-player-recorder": "^2.0.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
